// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup Component should have onPress event 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#f5f5f5",
        "borderColor": "#e3e3e3",
        "borderRadius": 3,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 40,
        "marginBottom": 5,
        "marginLeft": 10,
        "marginRight": 10,
        "marginTop": 5,
        "overflow": "hidden",
      },
      Object {
        "backgroundColor": "yellow",
      },
    ]
  }
>
  <TouchableHighlight
    activeOpacity={0.85}
    disabled={false}
    onPress={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "borderRightColor": "#bdc6cf",
          "borderRightWidth": 0,
        },
        false,
        false,
        Object {
          "borderBottomLeftRadius": 3,
          "borderTopLeftRadius": 3,
        },
        false,
      ]
    }
    underlayColor="#ffffff"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "blue",
          },
          false,
        ]
      }
    >
      <TextElement
        style={
          Array [
            Object {
              "color": "#5e6977",
              "fontSize": 16.25,
              "fontWeight": "500",
            },
            undefined,
            false,
            false,
          ]
        }
      >
        Button 1
      </TextElement>
    </View>
  </TouchableHighlight>
  <TouchableHighlight
    activeOpacity={0.85}
    disabled={false}
    onPress={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "borderRightColor": "#bdc6cf",
          "borderRightWidth": 1,
        },
        Object {
          "borderLeftColor": "#bdc6cf",
          "borderLeftWidth": 1,
        },
        false,
        false,
        false,
      ]
    }
    underlayColor="#ffffff"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "blue",
          },
          false,
        ]
      }
    >
      <TextElement
        style={
          Array [
            Object {
              "color": "#5e6977",
              "fontSize": 16.25,
              "fontWeight": "500",
            },
            undefined,
            false,
            false,
          ]
        }
      >
        Button 2
      </TextElement>
    </View>
  </TouchableHighlight>
  <TouchableHighlight
    activeOpacity={0.85}
    disabled={false}
    onPress={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        false,
        false,
        Object {
          "borderBottomRightRadius": 3,
          "borderTopRightRadius": 3,
        },
        false,
        false,
      ]
    }
    underlayColor="#ffffff"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "blue",
          },
          false,
        ]
      }
    >
      <TextElement
        style={
          Array [
            Object {
              "color": "#5e6977",
              "fontSize": 16.25,
              "fontWeight": "500",
            },
            undefined,
            false,
            false,
          ]
        }
      >
        Button 3
      </TextElement>
    </View>
  </TouchableHighlight>
</View>
`;

exports[`ButtonGroup Component should render lastButtonStyle 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#f5f5f5",
        "borderColor": "#e3e3e3",
        "borderRadius": 3,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 40,
        "marginBottom": 5,
        "marginLeft": 10,
        "marginRight": 10,
        "marginTop": 5,
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <TouchableHighlight
    activeOpacity={0.85}
    disabled={false}
    onPress={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "borderRightColor": "#bdc6cf",
          "borderRightWidth": 0,
        },
        false,
        false,
        Object {
          "borderBottomLeftRadius": 3,
          "borderTopLeftRadius": 3,
        },
        false,
      ]
    }
    underlayColor="#ffffff"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          undefined,
          false,
        ]
      }
    >
      <TextElement
        style={
          Array [
            Object {
              "color": "#5e6977",
              "fontSize": 16.25,
              "fontWeight": "500",
            },
            undefined,
            false,
            false,
          ]
        }
      >
        Button 1
      </TextElement>
    </View>
  </TouchableHighlight>
  <TouchableHighlight
    activeOpacity={0.85}
    disabled={false}
    onPress={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "borderRightColor": "#bdc6cf",
          "borderRightWidth": 1,
        },
        Object {
          "borderLeftColor": "#bdc6cf",
          "borderLeftWidth": 1,
        },
        false,
        false,
        false,
      ]
    }
    underlayColor="#ffffff"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          undefined,
          false,
        ]
      }
    >
      <TextElement
        style={
          Array [
            Object {
              "color": "#5e6977",
              "fontSize": 16.25,
              "fontWeight": "500",
            },
            undefined,
            false,
            false,
          ]
        }
      >
        Button 2
      </TextElement>
    </View>
  </TouchableHighlight>
  <TouchableHighlight
    activeOpacity={0.85}
    disabled={false}
    onPress={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        false,
        false,
        Object {
          "backgroundColor": "red",
          "borderBottomRightRadius": 3,
          "borderTopRightRadius": 3,
        },
        false,
        false,
      ]
    }
    underlayColor="#ffffff"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          undefined,
          false,
        ]
      }
    >
      <TextElement
        style={
          Array [
            Object {
              "color": "#5e6977",
              "fontSize": 16.25,
              "fontWeight": "500",
            },
            undefined,
            false,
            false,
          ]
        }
      >
        Button 3
      </TextElement>
    </View>
  </TouchableHighlight>
</View>
`;

exports[`ButtonGroup Component should render selectedIndex 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#f5f5f5",
        "borderColor": "#e3e3e3",
        "borderRadius": 3,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 40,
        "marginBottom": 5,
        "marginLeft": 10,
        "marginRight": 10,
        "marginTop": 5,
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <TouchableHighlight
    activeOpacity={0.85}
    disabled={false}
    onPress={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "borderRightColor": "#bdc6cf",
          "borderRightWidth": 0,
        },
        false,
        false,
        Object {
          "borderBottomLeftRadius": 3,
          "borderTopLeftRadius": 3,
        },
        false,
      ]
    }
    underlayColor="#ffffff"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          undefined,
          false,
        ]
      }
    >
      <TextElement
        style={
          Array [
            Object {
              "color": "#5e6977",
              "fontSize": 16.25,
              "fontWeight": "500",
            },
            undefined,
            false,
            false,
          ]
        }
      >
        Button 1
      </TextElement>
    </View>
  </TouchableHighlight>
  <TouchableHighlight
    activeOpacity={0.85}
    disabled={false}
    onPress={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "borderRightColor": "#bdc6cf",
          "borderRightWidth": 1,
        },
        Object {
          "borderLeftColor": "#bdc6cf",
          "borderLeftWidth": 1,
        },
        false,
        false,
        Object {
          "backgroundColor": "white",
        },
      ]
    }
    underlayColor="#ffffff"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          undefined,
          Object {
            "backgroundColor": "red",
          },
        ]
      }
    >
      <TextElement
        style={
          Array [
            Object {
              "color": "#5e6977",
              "fontSize": 16.25,
              "fontWeight": "500",
            },
            undefined,
            Object {
              "color": "#43484d",
            },
            Object {
              "fontSize": 12,
            },
          ]
        }
      >
        Button 2
      </TextElement>
    </View>
  </TouchableHighlight>
  <TouchableHighlight
    activeOpacity={0.85}
    disabled={false}
    onPress={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        false,
        false,
        Object {
          "borderBottomRightRadius": 3,
          "borderTopRightRadius": 3,
        },
        false,
        false,
      ]
    }
    underlayColor="#ffffff"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          undefined,
          false,
        ]
      }
    >
      <TextElement
        style={
          Array [
            Object {
              "color": "#5e6977",
              "fontSize": 16.25,
              "fontWeight": "500",
            },
            undefined,
            false,
            false,
          ]
        }
      >
        Button 3
      </TextElement>
    </View>
  </TouchableHighlight>
</View>
`;

exports[`ButtonGroup Component should render with button.element 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#f5f5f5",
        "borderColor": "#e3e3e3",
        "borderRadius": 3,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 40,
        "marginBottom": 5,
        "marginLeft": 10,
        "marginRight": 10,
        "marginTop": 5,
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <TouchableHighlight
    activeOpacity={0.85}
    disabled={false}
    onPress={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "borderRightColor": "red",
          "borderRightWidth": 0,
        },
        false,
        false,
        Object {
          "borderBottomLeftRadius": 3,
          "borderTopLeftRadius": 3,
        },
        false,
      ]
    }
    underlayColor="#ffffff"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          undefined,
          false,
        ]
      }
    >
      <Text />
    </View>
  </TouchableHighlight>
  <TouchableHighlight
    activeOpacity={0.85}
    disabled={false}
    onPress={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        false,
        Object {
          "borderLeftColor": "red",
          "borderLeftWidth": 300,
        },
        Object {
          "borderBottomRightRadius": 3,
          "borderTopRightRadius": 3,
        },
        false,
        false,
      ]
    }
    underlayColor="#ffffff"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          undefined,
          false,
        ]
      }
    >
      <View />
    </View>
  </TouchableHighlight>
</View>
`;

exports[`ButtonGroup Component should render without issues 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#f5f5f5",
        "borderColor": "#e3e3e3",
        "borderRadius": 3,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 40,
        "marginBottom": 5,
        "marginLeft": 10,
        "marginRight": 10,
        "marginTop": 5,
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <TouchableHighlight
    activeOpacity={0.85}
    disabled={false}
    onPress={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "borderRightColor": "#bdc6cf",
          "borderRightWidth": 0,
        },
        false,
        false,
        Object {
          "borderBottomLeftRadius": 3,
          "borderTopLeftRadius": 3,
        },
        false,
      ]
    }
    underlayColor="#ffffff"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          undefined,
          false,
        ]
      }
    >
      <TextElement
        style={
          Array [
            Object {
              "color": "#5e6977",
              "fontSize": 16.25,
              "fontWeight": "500",
            },
            undefined,
            false,
            false,
          ]
        }
      >
        Button 1
      </TextElement>
    </View>
  </TouchableHighlight>
  <TouchableHighlight
    activeOpacity={0.85}
    disabled={false}
    onPress={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "borderRightColor": "#bdc6cf",
          "borderRightWidth": 1,
        },
        Object {
          "borderLeftColor": "#bdc6cf",
          "borderLeftWidth": 1,
        },
        false,
        false,
        false,
      ]
    }
    underlayColor="#ffffff"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          undefined,
          false,
        ]
      }
    >
      <TextElement
        style={
          Array [
            Object {
              "color": "#5e6977",
              "fontSize": 16.25,
              "fontWeight": "500",
            },
            undefined,
            false,
            false,
          ]
        }
      >
        Button 2
      </TextElement>
    </View>
  </TouchableHighlight>
  <TouchableHighlight
    activeOpacity={0.85}
    disabled={false}
    onPress={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        false,
        false,
        Object {
          "borderBottomRightRadius": 3,
          "borderTopRightRadius": 3,
        },
        false,
        false,
      ]
    }
    underlayColor="#ffffff"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          undefined,
          false,
        ]
      }
    >
      <TextElement
        style={
          Array [
            Object {
              "color": "#5e6977",
              "fontSize": 16.25,
              "fontWeight": "500",
            },
            undefined,
            false,
            false,
          ]
        }
      >
        Button 3
      </TextElement>
    </View>
  </TouchableHighlight>
</View>
`;
